--- a/app/templates/erc360/structure.html
+++ b/app/templates/erc360/structure.html
@@ -89,7 +89,7 @@
             <i class='fa-solid fa-chess-bishop'></i>
             {% endif %}
             </span>
-            <span class="text">{{wallet.representation}}</span>
+            <span class="text">{{wallet.pretty_html_representation}}</span>
           {% endfor %}
           </td></tr>
           {% endwith %}
