--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -169,6 +169,14 @@ var proIcon = L.icon({
     popupAnchor:  [-2, 0] // point from which the popup should open relative to the iconAnchor
 });
 
+var erc360Icon = L.icon({
+    iconUrl: 'static/images/icon.png',
+
+    iconSize:     [25, 25], // size of the icon
+    iconAnchor:   [12.5, 12.5], // point of the icon which will correspond to marker's location
+    popupAnchor:  [-2, 0] // point from which the popup should open relative to the iconAnchor
+});
+
 var markers = L.markerClusterGroup().addTo(map);
 
 
