new erc360 map icon

--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -170,7 +170,7 @@ var proIcon = L.icon({
 });
 
 var erc360Icon = L.icon({
-    iconUrl: 'static/images/icon.png',
+    iconUrl: 'static/images/erc360-icon.png',
 
     iconSize:     [25, 25], // size of the icon
     iconAnchor:   [12.5, 12.5], // point of the icon which will correspond to marker's location
