--- a/app/templates/erc360/structure.html
+++ b/app/templates/erc360/structure.html
@@ -59,10 +59,35 @@
             <td><a href="{{token_amount.token.etherscan_url}}" target="_blank">{{token_amount.token.name}}</a></td>
             <td>{{token_amount.representation}}</td>
           </tr>
-          {% endfor %}
+          {% endfor %} 
         </table>
       </div>
     </div>
+    <div class="bank-tab-content vanish" id="bank-admins-content">
+          <table class="table is-striped is-bordered is-fullwidth">
+          {% with permit=erc360.permits.first() %}
+          {% for wallet in permit.wallets %}
+          <tr><td>
+            <span class='icon'>
+            {% if wallet in permit.parent.wallets %}
+            <i class='fa-solid fa-chess-king'></i>
+            {% else %}
+            <i class='fa-solid fa-chess-bishop'></i>
+            {% endif %}
+            </span>
+            <span class="text">{{wallet.pretty_html_representation}}</span>
+          {% endfor %}
+          </td></tr>
+          {% endwith %}
+        </table>
+        </div>
+        <div class="bank-tab-content vanish" id="bank-activity-content">
+          <table class="table is-striped is-bordered is-fullwidth">
+            {% for e in erc360.bank_events[::-1] %}
+              {% include 'erc360/event.html' %}
+            {% endfor %}
+          </table>
+        </div>
       {% else %}
       <div style="height: 320px;"><p style="height:320px;line-height:320px;">No banks created yet...</p></div>
       {% endif %}
