--- a/app/templates/erc360/event.html
+++ b/app/templates/erc360/event.html
@@ -1,58 +1,57 @@
 <div style="">
 <tr><td>
   {% set payload = e.payload %}
-    <span style="position: absolute;left:30px;float:left;overflow:hidden;">{{e.time}}</span>
+  <div class="event-top">
+    <span class="time-tick" style="">{{e.time}}</span>
     {% if payload["methodId"] == '0x60806040' %} <!-- on creation -->
-    <div class="event-top"><span class='icon'><i class='fa-solid fa-star'></i></span><span class='text'>Created</span></div>
+    <span class="event-type"><span class='icon'><i class='fa-solid fa-star'></i></span><span class='text'>Created</span></span></div>
       <p>Time: {{payload["blockNumber"]}}</p>
     {% elif payload["methodId"] == '0x' %} <!-- on simple receipt -->
     {% with from=models.Wallet.get_or_register(address=e.w3.toChecksumAddress(payload["from"])) %}
-    <div class="event-top"><span class='icon'><i class="fa-solid fa-money-bill-transfer"></i></span>
-      <span class='text'>Received</span></div>
+    <span class="event-type"><span class='icon'><i class="fa-solid fa-money-bill-transfer"></i></span>
+      <span class='text'>Received</span></span></div>
       <p>Amount: {{e.int(payload["value"])/(10**18)}}</p> 
       <p>From: <a href="{{from.etherscan_url}}" target="_blank">{{from.representation}}</a></p> 
     {% endwith %}
     {% elif payload["methodId"] == "0x8ab73cf9" %} <!-- setPermit(address,bytes32,bool) -->
     {% with account=models.Wallet.get_or_register(address=e.w3.toChecksumAddress(payload["args"]["account"])), permit=models.Permit.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["permit"])) %}
  %}
-      <div class="event-top"><span class='icon'><i class='fa-solid fa-user-tie'></i></span>
-      <span class='text'>Permit Set</span></div>
+      <span class="event-type"><span class='icon'><i class='fa-solid fa-user-tie'></i></span>
+      <span class='text'>Permit Set</span></span></div>
       <p>Permit: {{permit.representation}}</p>
       <p>Affected: {{account.pretty_html_representation}}</p>
       <p>New state: {{payload["args"]["status"]}}</p>
     {% endwith %}
     {% elif payload["methodId"] == "0x9a9abf85" %} <!-- setPermitParent(bytes32,bytes32) -->
     {% with permit=models.Permit.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["permit"])),parent=models.Permit.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["parent"])) %}
-      <div class="event-top"><span class='icon'><i class="fa-solid fa-sitemap"></i></span><span class='text'>Parent Permit Set</span></div>
+      <span class="event-type"><span class='icon'><i class="fa-solid fa-sitemap"></i></span><span class='text'>Parent Permit Set</span></span></div>
       <p>Permit: {{permit.representation}}</p>
       <p>Parent: {{parent.representation}}</p>
     {% endwith %}
     {% elif payload["methodId"] == "0x40c10f19" %} <!-- mint(address,uint256) -->
       {% with account=models.Wallet.get_or_register(address=e.w3.toChecksumAddress(payload["args"]["account"])) %}
-      <div class="event-top"><span class='icon'><i class="fa-solid fa-money-bill-trend-up"></i></span>
-      <span class='text'>Mint</span></div>
+      <span class="event-type"><span class='icon'><i class="fa-solid fa-money-bill-trend-up"></i></span><span class='text'>Mint</span></span></div>
       <p>Account: {{account.pretty_html_representation}}
       <p>Amount: {{e.int(payload["args"]["amount"])}}</p>
       {% endwith %}
     {% elif payload["methodId"] == "0x873fdde7" %} <!-- issueDividend(bytes32,address,uint256) -->
     {% with bank=models.Bank.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["bank"])) %}
-      <div class="event-top"><span class='icon'><i class='fa-solid fa-money-check-dollar'></i></span></div>
-      <span class='text'>Dividend Issued</span>
+      <span class="event-type"><span class='icon'><i class='fa-solid fa-money-check-dollar'></i></span><span class='text'>Dividend Issued</span></span></div>
       <p>Bank: {{bank.representation}}</p>
       <p>Token: {{payload["args"]["token"]}}</p>
       <p>Amount: {{e.int(payload["args"]["amount"])/(10**18)}}</p>
     {% endwith %}
      {% elif payload["methodId"] == "0x3598f3f3" %} <!-- issueVote(bytes4[],bytes[],uint256) -->
-      <div class="event-top"><span class='icon'><i class="fa-solid fa-square-poll-vertical"></i></span><span class='text'>Vote Issued</span></div>
+      <span class="event-type"><span class='icon'><i class="fa-solid fa-square-poll-vertical"></i></span><span class='text'>Vote Issued</span></span></div>
       <p>Sigs: {{payload["args"]["sigs"]}}</p>
       <p>Args: {{payload["args"]["args"]}}</p>
       <p>Duration: {{payload["args"]["duration"]}}</p>
      {% elif payload["methodId"] == "0x74c8df12" %} <!-- implementResolution(uint256) -->
-      <div class="event-top"><span class='icon'><i class="fa-solid fa-check-to-slot"></i></span><span class='text'>Implemented Resolution</span></div>
+      <span class="event-type"><span class='icon'><i class="fa-solid fa-check-to-slot"></i></span><span class='text'>Implemented Resolution</span></span></div>
       <p>Vote Id: {{payload["args"]["voteId"]}}</p>
     {% elif payload["methodId"] == "0x3b51634f" %} <!-- callExternal(address,bytes4,bytes,uint256,bytes32) -->
       {% with bank=models.Bank.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["bank"])) %}
-      <div class="event-top"><span class='icon'><i class="fa-solid fa-phone"></i></span><span class='text'>External Call</span></div>
+      <span class="event-type"><span class='icon'><i class="fa-solid fa-phone"></i></span><span class='text'>External Call</span></span></div>
       <p>Ext: {{payload["args"]["ext"]}}</p>
       <p>Sig: {{payload["args"]["sig"]}}</p>
       <p>Args: {{payload["args"]["args"]}}</p>
@@ -61,13 +60,13 @@
       {% endwith %}
     {% elif payload["methodId"] == "0x23a7c49b" %} <!-- setExternalCallPermit(address,bytes4,bytes32) -->
     {% with permit=models.Permit.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["permit"])) %}
-      <div class="event-top"><span class='icon'><i class="fa-solid fa-id-card"></i></span><span class='text'>External Call Permit Set</span></div>
+      <span class="event-type"><span class='icon'><i class="fa-solid fa-id-card"></i></span><span class='text'>External Call Permit Set</span></span></div>
       <p>Ext: {{payload["args"]["ext"]}}</p>
       <p>Sig: {{payload["args"]["sig"]}}</p>
       <p>Permit: {{permit.representation}}</p>
     {% endwith %}
     {% elif payload["methodId"] == "0x7ab1f504" %} <!-- transferFundsFromBank(bytes32,address,address,uint256) -->
-      <div class="event-top"><span class='icon'><i class='fa-solid fa-money-bill-transfer'></i></span><span class='text'>Funds Transferred</span></div>
+      <span class="event-type"><span class='icon'><i class='fa-solid fa-money-bill-transfer'></i></span><span class='text'>Funds Transferred</span></span></div>
       {% with token=models.Token.get_or_register(address=payload["args"]["token"]),bank=models.Bank.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["fromBank"])),to=models.Wallet.get_or_register(address=e.w3.toChecksumAddress(payload["args"]["to"])) %}
       <p>Token: <a href="{{token.etherscan_url}}" target="_blank">{{token.representation}}</a></p>
       <p>Amount: {{e.int(payload["args"]["amount"])/(10**18)}}</p>
@@ -77,7 +76,7 @@
     {% endwith %}
     {% elif payload["methodId"] == "0x3fb3a2d7" %} <!-- moveFunds(bytes32,bytes32,address,uint256) -->
     {% with token=models.Token.get_or_register(address=payload["args"]["token"]),fromBank=models.Bank.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["fromBank"])),toBank=models.Bank.get_or_register(erc360=erc360,bytes=e.bytearray.fromhex(payload["args"]["toBank"])) %}
-      <div class="event-top"><span class='icon'><i class='fa-solid fa-building-columns'></i></span><span class='text'>Funds Moved</span></div>
+     <span class="event-type"><span class='icon'><i class='fa-solid fa-building-columns'></i></span><span class='text'>Funds Moved</span></span></div>
       <p>From bank: {{fromBank.representation}}</p>
       <p>To bank: {{toBank.representation}}</p>
       <p>Token: {{token.pretty_html_representation}}</p>
