--- a/app/templates/erc360/profile.html
+++ b/app/templates/erc360/profile.html
@@ -71,6 +71,7 @@
 <link rel="stylesheet" href="/static/css/profile/profile.css">
 <link rel="stylesheet" href="/static/css/erc360/erc360.css">
 <link rel="stylesheet" href="/static/css/erc360/structure.css">
+<link rel="stylesheet" href="/static/css/erc360/timeline.css">
 <link rel="stylesheet" href="/static/css/erc360/mint.css">
 <link rel="stylesheet" href="/static/css/extras/entity.css">
 <link rel="stylesheet" href="/static/css/profile/mini-profile.css">
