some files ready to build on

--- a/app/templates/erc360/structure/deposit.html
+++ b/app/templates/erc360/structure/deposit.html
@@ -21,7 +21,7 @@
           </span>
       </p>
       <p class="control">
-        <input id="deposit-amount-input" class="input" type="text" placeholder="Amount to deposit" min="1" max="{{2**256-1}}" maxlength="78">
+        <input id="deposit-amount-input" class="input amount-input" type="text" placeholder="Amount to deposit" min="1" max="{{2**256-1}}" maxlength="78">
       </p>
     </div>
     </div>
