--- a/app/templates/erc360/profile.html
+++ b/app/templates/erc360/profile.html
@@ -479,6 +479,11 @@ $(window).on("popstate", function() {
 
 var STRUCTURE_HTML = `{% include "erc360/structure.html" %}`;
 
+var OWNERSHIP_HTML = `{% include "erc360/ownership.html" %}`;
+
+var TIMELINE_HTML = `{% include "erc360/timeline.html" %}`;
+
+
 var TRANSFER_HTML = `{% include "erc360/structure/transfer.html" %}`;
 
 var ASSIGN_HTML = `{% include "erc360/structure/assign.html" %}`;
