--- a/app/templates/erc360/edit.html
+++ b/app/templates/erc360/edit.html
@@ -1,4 +1,4 @@
-<div class="modal is-active" id="#edit-modal">
+<div class="modal is-active" id="edit-modal">
 <div class="modal-background to-profile"></div>
 <div class="modal-card noselect">
   <header class="modal-card-head">
@@ -8,7 +8,7 @@
         </span>
       </a>
       <p class="modal-card-title" id="header">Edit ERC360Corporatizable</p>
-      <button class="button is-info is-normal is-rounded" id="save-button">
+      <button class="button is-info is-normal is-rounded loading-button" id="save-button">
         <span>Save</span>
       </button>
   </header>
