--- a/app/templates/marketplace.html
+++ b/app/templates/marketplace.html
@@ -1,1 +1,6 @@
-ECONOMY BOOM
+{% extends "base.html" %}
+{% block content %}
+<p class="title is-1">ECONOMY BOOM</p>
+{% endblock %}
+{% block scripts %}
+{% endblock %}
