--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -31,19 +31,19 @@
          <div class="card">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                <img src="https://scontent-cph2-1.xx.fbcdn.net/v/t39.30808-6/326702075_868961657514977_5330751113034258501_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_ohc=AEexhFyozl8AX8pkZ45&_nc_ht=scontent-cph2-1.xx&oh=00_AfBTjn5bLz-7WRdvG1JvFFmFhPn-hVIyTHrJoIj1WCfUNg&oe=65FD0C1E" alt="Placeholder image">
               </figure>
             </div>
           <div class="card-content">
             <div class="media">
               <div class="media-left">
                 <figure class="image is-48x48">
-                  <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                  <img src="https://scontent-cph2-1.xx.fbcdn.net/v/t39.30808-1/326745409_855344622241621_3447039327499919377_n.jpg?stp=c5.0.479.480a_dst-jpg_p480x480&_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=xoXoNx2t83oAX-jITLB&_nc_ht=scontent-cph2-1.xx&oh=00_AfDrY3FNCM7WMXmRAG0fqmF7iySeeDDTeQP2l00OKbD9dA&oe=65FDFFF3" alt="Placeholder image">
                 </figure>
               </div>
               <div class="media-content">
                 <p class="title is-4">Frederik Walther Liberoth Christoffersen</p>
-                <p class="subtitle is-6">@frederik</p>
+                <p class="subtitle is-6">@FrederikWLC</p>
               </div>
             </div>
 
@@ -57,24 +57,24 @@
         <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+          <img src="https://pbs.twimg.com/media/Dr3I6hXW4AEIq97.jpg" alt="Placeholder image">
         </figure>
       </div>
       <div class="card-content">
         <div class="media">
           <div class="media-left">
             <figure class="image is-48x48">
-              <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+              <img src="https://scontent-cph2-1.xx.fbcdn.net/v/t1.6435-9/119734837_2670465519888142_4881519608634396859_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=yFW-UO5J3x4AX-mYHhG&_nc_ht=scontent-cph2-1.xx&oh=00_AfBgPReUOpXgVZXgl4teEgUkyugr5LU0axuyslNkZA1YGA&oe=661FB32D" alt="Placeholder image">
             </figure>
           </div>
           <div class="media-content">
-            <p class="title is-4">Theo Lemle</p>
-            <p class="subtitle is-6">@theo</p>
+            <p class="title is-4">Adrian Maciejewski</p>
+            <p class="subtitle is-6">@W4terM3llon</p>
           </div>
         </div>
 
         <div class="content">
-          The wise grown-up with real life experience. Currently researching the field of decentralized finance.
+          The wise Pole with a job in software. Currently working at some lame insurance company with .NET C#.
         </div>
       </div>
     </div>
