--- a/app/templates/profile/add-members.html
+++ b/app/templates/profile/add-members.html
@@ -15,7 +15,7 @@
   <section class="modal-card-body has-text-centered">
 
   <div>
-      <h1><b>Invite allies</b></h1>
+      <h1><b>Invite associates</b></h1>
       <div class="textarea has-fixed-size" id="add-members-field"><div id="add-members-tags-container"></div><div data-text="Enter names or usernames" id="add-members-text-field" class="placeholder" contenteditable></div></div>
     </div>
         <div id="select-connections" class="vanish"></div>
