--- a/app/templates/email/auth.html
+++ b/app/templates/email/auth.html
@@ -1,12 +1,12 @@
 <p>Hi {{ user.username }},</p>
 <p>
     To activate your account
-    <a href="{{ url_for('auth.activate', token=token, _external=True) }}">
+    <a href="{{ url_for('auth.activate', auth_token=auth_token, _external=True) }}">
         click here
     </a>.
 </p>
 <p>Alternatively, you can paste the following link in your browser's address bar:</p>
-<p>{{ url_for('auth.activate', token=token, _external=True) }}</p>
+<p>{{ url_for('auth.activate', auth_token=auth_token, _external=True) }}</p>
 <p>If you have not created a user, simply ignore this message.</p>
 <p>See you online,</p>
 <p>The Counekt Team</p>
