--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -8,8 +8,13 @@
   	<div id="first-thing" class="columns">
   	
     <div id="title-column" class="column" style="min-height: 100%;height: 100%; ">
+      <p class="title is-3 is-spaced" style="white-space: nowrap;
+">
+  Coming soon...
+</p>
       <p class="title is-1 is-spaced" style="white-space: nowrap;
 ">
+
         Entrepreneurial <br>infrastructure <br>for the internet.
       </p>
       <p class="subtitle">
@@ -31,14 +36,14 @@
          <div class="card">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://scontent-cph2-1.xx.fbcdn.net/v/t39.30808-6/326702075_868961657514977_5330751113034258501_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_ohc=AEexhFyozl8AX8pkZ45&_nc_ht=scontent-cph2-1.xx&oh=00_AfBTjn5bLz-7WRdvG1JvFFmFhPn-hVIyTHrJoIj1WCfUNg&oe=65FD0C1E" alt="Placeholder image">
+                <img src="{{ url_for('static', filename='images/wallpaper.jpg') }}" alt="Placeholder image">
               </figure>
             </div>
           <div class="card-content">
             <div class="media">
               <div class="media-left">
                 <figure class="image is-48x48">
-                  <img src="https://scontent-cph2-1.xx.fbcdn.net/v/t39.30808-1/326745409_855344622241621_3447039327499919377_n.jpg?stp=c5.0.479.480a_dst-jpg_p480x480&_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=xoXoNx2t83oAX-jITLB&_nc_ht=scontent-cph2-1.xx&oh=00_AfDrY3FNCM7WMXmRAG0fqmF7iySeeDDTeQP2l00OKbD9dA&oe=65FDFFF3" alt="Placeholder image">
+                  <img src="{{ url_for('static', filename='images/4years.jpg') }}" alt="Placeholder image">
                 </figure>
               </div>
               <div class="media-content">
@@ -53,32 +58,7 @@
         </div>
       </div>
       </div>
-      <div class="column">
-        <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="https://pbs.twimg.com/media/Dr3I6hXW4AEIq97.jpg" alt="Placeholder image">
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-left">
-            <figure class="image is-48x48">
-              <img src="https://scontent-cph2-1.xx.fbcdn.net/v/t1.6435-9/119734837_2670465519888142_4881519608634396859_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=yFW-UO5J3x4AX-mYHhG&_nc_ht=scontent-cph2-1.xx&oh=00_AfBgPReUOpXgVZXgl4teEgUkyugr5LU0axuyslNkZA1YGA&oe=661FB32D" alt="Placeholder image">
-            </figure>
-          </div>
-          <div class="media-content">
-            <p class="title is-4">Adrian Maciejewski</p>
-            <p class="subtitle is-6">@W4terM3llon</p>
-          </div>
-        </div>
-
-        <div class="content">
-          The wise Pole with a job in software. Currently working at some lame insurance company with .NET C#.
-        </div>
-      </div>
-    </div>
-      </div>
+     
 </div>
 </div>
 </section>
