--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,25 +1,18 @@
 {% extends "base.html" %}
-{% block body %}
-<div class="has-text-centered">
-<p class="title is-1">About Us</p>
-<div id="questions">
-	<div class="q">
-		<p class="title is-3">Who Are We?</p>
-	</div>
-	<div class="a">
-		<p class="subtitle is-4">You'll see...</p>
-	</div>
-	<div class="q">
-		<p class="title is-3">What's the ERC360 token?</p>
-	</div>
-	<div class="a">
-		<p class="subtitle is-4">You'll see...</p>
-	</div>
+{% block content %}
+<div class="has-text-centered is-rounded" style="max-width:1000px; background-color:white;color: black;padding: 30px; border-radius: 20px;">
+<p class="title is-1" style="color: black;">About Us</p>
+<p class="subtitle" style="color: black;">
+Welcome to Counekt, a platform designed to revolutionize the way connections and collaborations happen. Counekt provides an intuitive space where you can network with like-minded individuals, discover new opportunities, and bring your ideas to life.</p>
 
-</div>
+<p class="subtitle" style="color: black;">
+Whether you're an entrepreneur seeking investors, a professional expanding your network, or a creative looking to collaborate on projects, Counekt offers the tools and community you need. Join and be part of an ecosystem that fosters growth, innovation, and new possibilities. Transform the way you connect with Counekt.
+</p>
+
+<p class="subtitle" style="color: black;">
+We're more than welcoming early adopters! The platform is still in progress, however, so please bear in mind that far from everything is fully functional yet.
+</p>
 </div>
 {% endblock %}
 {% block scripts %}
-<link rel="stylesheet" href="/static/css/help.css">
-<script src="../static/js/help.js"></script>
 {% endblock %}
