index text always visible

--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <section class="hero is-info is-fullheight" style="background-image: linear-gradient(to bottom right, navy,deepskyblue);">
-  <div class="hero-body">
+  <div class="hero-body" style="min-height:775px;">
   	<div id="first-thing" class="columns">
   	
     <div id="title-column" class="column" style="min-height: 100%;height: 100%; ">
